[package]
name = "popstack"
version = "0.1.2"
authors = ["Rafał Wrzeszcz <rafal.wrzeszcz@wrzasq.pl>"]

[dependencies]
flate2 = { version = "0.2", features = ["zlib"], default-features = false }
hyper = "0.7"
regex = "0.1"
serde_json = "0.7.0"
marksman_escape = "0.1.2"

[dependencies.url]
git = "https://github.com/servo/rust-url"
